# coding-adventures

./: Makefile  README.md  pyproject.toml
adventure/: voronoi.py  wfc_sudoku.py
adventure/cli/: app.py  common.py
adventure/cli/level_generation/: __init__.py  voronoi.py
adventure/cli/level_generation/output/: voronoi.py
adventure/cli/output/: console.py  consts.py
adventure/level_generation/: base.py  distance.py  errors.py  level.py  utils.py
adventure/level_generation/generators/: position.py  voronoi.py
adventure/scripts/: image.py
adventure/tree/: base.py
